feat: adiciona novos métodos e ajusta fluxo de serviços e repositórios para Fornecedor e Produto