@@ -1,5 +1,8 @@
 package io.github.wiriswernek.fisctrack.domain.service.impl;
 
+import java.util.List;
+import java.util.Set;
+
 import io.github.wiriswernek.fisctrack.core.exceptions.BusinessException;
 import io.github.wiriswernek.fisctrack.core.exceptions.ValidationException;
 import io.github.wiriswernek.fisctrack.core.mapper.NotaFiscalMapper;
@@ -16,93 +19,89 @@ import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Validator;
 import lombok.RequiredArgsConstructor;
 
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 @ApplicationScoped
 @RequiredArgsConstructor
 public class NotaFiscalServiceImpl implements NotaFiscalService {
 
-    private final NotaFiscalRepository notaFiscalRepository;
-    private final FornecedorRepository fornecedorRepository;
-    private final Validator validator;
+	private final NotaFiscalRepository notaFiscalRepository;
+	private final FornecedorRepository fornecedorRepository;
+	private final Validator validator;
 
-    @Override
-    public List<NotaFiscalResponse> search(NotaFiscalFilter filter) throws Exception {
-        var query = notaFiscalRepository.search(filter);
-        return query.list().stream().map(NotaFiscalMapper::toResponseByEntity).collect(Collectors.toList());
-    }
+	@Override
+	public List<NotaFiscalResponse> search(NotaFiscalFilter filter) throws Exception {
+		var query = notaFiscalRepository.search(filter);
+		return query.list().stream().map(NotaFiscalMapper::toResponseByEntity).toList();
+	}
 
-    @Override
-    public NotaFiscalResponse findById(Long id) throws Exception {
-        var entity = notaFiscalRepository.findById(id);
-        if (entity == null) {
-            return null;
-        }
-        return NotaFiscalMapper.toResponseByEntity(entity);
-    }
+	@Override
+	public NotaFiscalResponse findById(Long id) throws Exception {
+		var entity = notaFiscalRepository.findById(id);
+		if (entity == null) {
+			return null;
+		}
+		return NotaFiscalMapper.toResponseByEntity(entity);
+	}
 
-    @Override
-    public void create(NotaFiscalRequest notaFiscalRequest) throws Exception {
-        validate(notaFiscalRequest);
+	@Override
+	public void create(NotaFiscalRequest notaFiscalRequest) throws Exception {
+		validate(notaFiscalRequest);
 
-        var fornecedor = getFornecedor(notaFiscalRequest.getFornecedorId());
-        var entity = NotaFiscalMapper.toEntityByRequest(notaFiscalRequest);
+		var fornecedor = getFornecedor(notaFiscalRequest.getFornecedorId());
+		var entity = NotaFiscalMapper.toEntityByRequest(notaFiscalRequest);
 
-        entity.setFornecedor(fornecedor);
-        notaFiscalRepository.persist(entity);
-    }
+		entity.setFornecedor(fornecedor);
+		notaFiscalRepository.persist(entity);
+	}
 
-    @Override
-    public void update(Long id, NotaFiscalRequest notaFiscalRequest) throws Exception {
-        var entity = getNotaFiscal(id);
+	@Override
+	public void update(Long id, NotaFiscalRequest notaFiscalRequest) throws Exception {
+		var entity = getNotaFiscal(id);
 
-        validate(notaFiscalRequest);
-        var fornecedor = getFornecedor(notaFiscalRequest.getFornecedorId());
+		validate(notaFiscalRequest);
+		var fornecedor = getFornecedor(notaFiscalRequest.getFornecedorId());
 
-        entity.setNumeroNota(notaFiscalRequest.getNumeroNota());
-        entity.setTotal(notaFiscalRequest.getTotal());
-        entity.setFornecedor(fornecedor);
+		entity.setNumeroNota(notaFiscalRequest.getNumeroNota());
+		entity.setTotal(notaFiscalRequest.getTotal());
+		entity.setFornecedor(fornecedor);
 
-        var enderecoRequest = notaFiscalRequest.getEndereco();
-        var endereco = entity.getEndereco();
+		var enderecoRequest = notaFiscalRequest.getEndereco();
+		var endereco = entity.getEndereco();
 
-        endereco.setBairro(enderecoRequest.getBairro());
-        endereco.setCidade(enderecoRequest.getCidade());
-        endereco.setEstado(enderecoRequest.getEstado());
-        endereco.setNumero(enderecoRequest.getNumero());
-        endereco.setPais(enderecoRequest.getPais());
-        endereco.setRua(enderecoRequest.getRua());
+		endereco.setBairro(enderecoRequest.getBairro());
+		endereco.setCidade(enderecoRequest.getCidade());
+		endereco.setEstado(enderecoRequest.getEstado());
+		endereco.setNumero(enderecoRequest.getNumero());
+		endereco.setPais(enderecoRequest.getPais());
+		endereco.setRua(enderecoRequest.getRua());
 
-    }
+	}
 
-    @Override
-    public void delete(Long id) throws Exception {
-        var entity = getNotaFiscal(id);
-        notaFiscalRepository.delete(entity);
-    }
+	@Override
+	public void delete(Long id) throws Exception {
+		var entity = getNotaFiscal(id);
+		notaFiscalRepository.delete(entity);
+	}
 
-    private NotaFiscal getNotaFiscal(Long id) throws BusinessException {
-        var entity = notaFiscalRepository.findById(id);
-        if (entity == null) {
-            throw new BusinessException("Nota Fiscal não encontrada");
-        }
-        return entity;
-    }
+	private NotaFiscal getNotaFiscal(Long id) throws BusinessException {
+		var entity = notaFiscalRepository.findById(id);
+		if (entity == null) {
+			throw new BusinessException("Nota Fiscal não encontrada");
+		}
+		return entity;
+	}
 
-    private void validate(NotaFiscalRequest notaFiscalRequest) throws Exception {
-        Set<ConstraintViolation<NotaFiscalRequest>> violations = validator.validate(notaFiscalRequest);
-        if (!violations.isEmpty()) {
-            throw ValidationException.generateMessage(violations);
-        }
-    }
+	private void validate(NotaFiscalRequest notaFiscalRequest) throws Exception {
+		Set<ConstraintViolation<NotaFiscalRequest>> violations = validator.validate(notaFiscalRequest);
+		if (!violations.isEmpty()) {
+			throw ValidationException.generateMessage(violations);
+		}
+	}
 
-    private Fornecedor getFornecedor(Long fornecedorId) throws Exception {
-        var fornecedor = fornecedorRepository.findById(fornecedorId);
-        if (fornecedor == null) {
-            throw new BusinessException("Fornecedor não encontrado");
-        }
-        return fornecedor;
-    }
+	private Fornecedor getFornecedor(Long fornecedorId) throws Exception {
+		var fornecedor = fornecedorRepository.findById(fornecedorId);
+		if (fornecedor == null) {
+			throw new BusinessException("Fornecedor não encontrado");
+		}
+		return fornecedor;
+	}
 }
